[package]
name = "ferronconf"
version = "0.1.3"
edition = "2021"
authors = ["Dorian Niemiec <dorian@ferron.sh>"]
description = "A Rust library for parsing `ferron.conf` configuration files — a domain-specific language for custom web server configurations."
license = "MIT"
readme = "README.md"
keywords = ["config"]
documentation = "https://docs.rs/ferronconf"
repository = "https://github.com/ferronweb/ferronconf"

[dependencies]
indenter = { version = "0.3.4", features = ["std"] }
