[package]
name = "ferronconf"
version = "0.3.0"
edition = "2021"
authors = ["Dorian Niemiec <dorian@ferron.sh>"]
description = "A Rust library for parsing `ferron.conf` configuration files — a domain-specific language for Ferron web server configurations."
license = "MIT"
readme = "README.md"
keywords = ["config"]
documentation = "https://docs.rs/ferronconf"
repository = "https://github.com/ferronweb/ferronconf"

[dependencies]
indenter = { version = "0.3.4", features = ["std"] }
visibility = "0.1.1"

[features]
default = ["lexer-public"]
lexer-public = []

[package.metadata.docs.rs]
all-features = true
